# pdfopers

./: exceltopdf.py  extractpdf.py  makepdf.py  pyproject.toml
